[package]
name = "get-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {Version = "0.11.4", features = ["blocking", "json"]}
error-chain = "0.12.4"
serde = {version = "1.0", features = ["derive"]}
