[package]
name = "windows-wifi-password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.52.0"

features = [
   "Win32_Foundation",
   "Foundation_Collections",
   "Win32 NetworkManagement WiFi",
   "Win32 Security",
   "Win32_Systen_Con",
   "Win32 System Threading",
   "Win32_UI WindowsAndMessaging",
   
]
